--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,13 @@ cryptography==36.0.2
 cssselect==1.1.0
 filelock==3.6.0
 Flask==2.0.1
+Flask-Cors==3.0.10
 Flask-Session==0.4.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
+fuzzywuzzy==0.18.0
 greenlet==1.1.0
+gunicorn==20.1.0
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
@@ -44,13 +47,13 @@ PyDispatcher==2.0.5
 pyOpenSSL==22.0.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
+python-Levenshtein==0.12.2
 pytz==2020.1
 queuelib==1.6.2
 requests==2.27.1
 requests-file==1.5.1
 scikit-learn==1.0.2
 scipy==1.8.0
-Scrapy==2.6.1
 service-identity==21.1.0
 six==1.15.0
 soupsieve==2.3.2.post1
