--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 attrs==21.4.0
-numpy==1.8.0
 Automat==20.2.0
 beautifulsoup4==4.11.1
+Bottleneck @ file:///opt/concourse/worker/volumes/live/220f0b56-5355-4122-6705-41fcd18e285c/volume/bottleneck_1648028927947/work
 cachelib==0.6.0
 certifi==2021.10.8
 cffi==1.15.0
@@ -31,6 +31,11 @@ jmespath==1.0.0
 joblib==1.1.0
 lxml==4.8.0
 MarkupSafe==2.0.1
+mkl-fft==1.3.1
+mkl-random @ file:///opt/concourse/worker/volumes/live/0cda23d8-7460-44b2-7e5d-3c76a8a0ca7e/volume/mkl_random_1626186083266/work
+mkl-service==2.4.0
+numexpr @ file:///opt/concourse/worker/volumes/live/87ac54fe-281a-440d-4d94-26ac99bdabdc/volume/numexpr_1640704258458/work
+numpy==1.9.0
 packaging==20.4
 pandas==1.4.1
 parsel==1.6.0
@@ -48,7 +53,7 @@ queuelib==1.6.2
 requests==2.27.1
 requests-file==1.5.1
 scikit-learn==1.0.2
-scipy==1.8.0
+scipy==0.13.3
 service-identity==21.1.0
 six==1.15.0
 soupsieve==2.3.2.post1
