--- a/requirements.txt
+++ b/requirements.txt
@@ -1,142 +1,13 @@
-alabaster==0.7.12
-appdirs==1.4.4
-astor==0.8.1
-attrs==21.4.0
-autoflake==1.4
-Automat==20.2.0
-Babel==2.10.1
-bandit==1.7.4
+numpy
+scipy
+Flask==1.0.0
+pandas
+scikit_learn
 beautifulsoup4==4.11.1
-black==20.8b1
-cachelib==0.6.0
-certifi==2021.10.8
-cffi==1.15.0
-chardet==4.0.0
-charset-normalizer==2.0.12
-click==8.0.1
-constantly==15.1.0
-coverage==5.5
-cryptography==36.0.2
-cssselect==1.1.0
-darglint==1.8.1
-distlib==0.3.4
-doc8==0.8.1
-docutils==0.17.1
-eradicate==1.0
-filelock==3.6.0
-flake8==3.9.2
-flake8-2020==1.6.1
-flake8-bandit==2.1.2
-flake8-broken-line==0.2.1
-flake8-bugbear==19.8.0
-flake8-builtins==1.5.3
-flake8-commas==2.1.0
-flake8-comprehensions==3.8.0
-flake8-debugger==3.2.1
-flake8-docstrings==1.6.0
-flake8-eradicate==0.3.0
-flake8-fixme==1.1.1
-flake8-isort==3.0.1
-flake8-logging-format==0.6.0
-flake8-mutable==1.2.0
-flake8-polyfill==1.0.2
-flake8-quotes==2.1.2
-flake8-rst-docstrings==0.0.12
-flake8-string-format==0.2.3
-flake8-variables-names==0.0.3
-Flask==2.0.1
-Flask-Cors==3.0.10
-Flask-Session==0.4.0
-Flask-SQLAlchemy==2.5.1
-Flask-WTF==0.15.1
+Flask-Cors
+Flask-SQLAlchemy
 fuzzywuzzy==0.18.0
-gitdb==4.0.9
-GitPython==3.1.27
-greenlet==1.1.0
 gunicorn==20.1.0
-hyperlink==21.0.0
-idna==3.3
-imagesize==1.3.0
-incremental==21.3.0
-iniconfig==1.1.1
-install==1.3.5
-isort==4.3.21
-itemadapter==0.5.0
-itemloaders==1.0.4
-itsdangerous==2.0.1
-Jinja2==3.0.1
-jmespath==1.0.0
-joblib==1.1.0
-lxml==4.8.0
-MarkupSafe==2.0.1
-mccabe==0.6.1
-mkl-fft==1.3.1
-mkl-service==2.4.0
-mypy-extensions==0.4.3
-numpy==1.9.0
-packaging==20.4
-pandas==1.4.1
-parsel==1.6.0
-pathspec==0.9.0
-pbr==5.8.1
-pep8-naming==0.9.1
-platformdirs==2.5.2
-pluggy==1.0.0
-Protego==0.2.1
-py==1.11.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.7.0
-pycparser==2.21
-PyDispatcher==2.0.5
-pydocstyle==5.1.1
-pyflakes==2.3.1
-Pygments==2.11.2
-pyOpenSSL==22.0.0
-pyparsing==2.4.7
-pytest==6.2.5
-pytest-cov==2.12.1
-python-dateutil==2.8.1
-python-Levenshtein==0.12.2
-pytz==2020.1
-pyupgrade==2.32.0
-PyYAML==6.0
-queuelib==1.6.2
-regex==2022.3.15
 requests==2.27.1
-requests-file==1.5.1
-restructuredtext-lint==1.4.0
-scikit-learn==1.0.2
-scipy==1.8.0
-service-identity==21.1.0
-six==1.15.0
-smmap==5.0.0
-snowballstemmer==2.2.0
-soupsieve==2.3.2.post1
-Sphinx==2.4.5
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.0
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-SQLAlchemy==1.4.20
-stevedore==3.5.0
-testfixtures==6.18.5
-threadpoolctl==3.1.0
-tldextract==3.2.1
-tmdbsimple==2.9.1
-tokenize-rt==4.2.1
-toml==0.10.2
-tox==3.25.0
-tox-travis==0.12
-Twisted==22.4.0
-typed-ast==1.5.3
-typing-extensions==3.10.0.2
 urllib3==1.26.9
-virtualenv==20.14.1
-w3lib==1.22.0
-wemake-python-styleguide==0.14.1
-Werkzeug==2.0.1
-WTForms==2.3.3
-zope.interface==5.4.0
+python-Levenshtein
