--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 numpy
 scipy
-Flask==1.0.0
+Flask==2.0.3
 pandas
 scikit_learn
 beautifulsoup4==4.11.1
@@ -11,3 +11,4 @@ gunicorn==20.1.0
 requests==2.27.1
 urllib3==1.26.9
 python-Levenshtein
+Jinja2==3.1.1
